fix: Robust AI JSON parsing - allow comments, ignore unknown properties, and fallback error